cmake_minimum_required(VERSION 3.0)

project(sqlite_amalgamation)

option(SQLITE_AMALGAMATION_ENABLE_FTS3 "Enables the FTS3 extension" OFF)
option(SQLITE_AMALGAMATION_ENABLE_FTS5 "Enables the FTS5 extension" OFF)
option(SQLITE_AMALGAMATION_ENABLE_RTREE "Enables the RTREE extension" OFF)
option(SQLITE_AMALGAMATION_ENABLE_DBSTAT "Enables the DBSTAT extension" OFF)
option(SQLITE_AMALGAMATION_ENABLE_JSON "Enables the JSON1 extension" OFF)
option(SQLITE_AMALGAMATION_ENABLE_RBU "Enables the RBU extension" OFF)

add_library(sqlite_amalgamation STATIC src/sqlite3.c)
target_include_directories(sqlite_amalgamation PUBLIC include)

if (SQLITE_AMALGAMATION_ENABLE_FTS3)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_FTS3)
endif ()
if (SQLITE_AMALGAMATION_ENABLE_FTS5)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_FTS5)
endif ()
if (SQLITE_AMALGAMATION_ENABLE_RTREE)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_RTREE)
endif ()
if (SQLITE_AMALGAMATION_ENABLE_DBSTAT)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_DBSTAT_VTAB)
endif ()
if (SQLITE_AMALGAMATION_ENABLE_JSON)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_JSON1)
endif ()
if (SQLITE_AMALGAMATION_ENABLE_RBU)
    target_compile_definitions(sqlite_amalgamation PRIVATE SQLITE_ENABLE_RBU)
endif ()
